--- a/main.css
+++ b/main.css
@@ -19,9 +19,10 @@ section {
     width: 25%;
     height: 100px;
     border: 1px solid black;
-    background-color: #61B34F;
+    background-color:purple;
     justify-content: center;
     align-items: center;
+    color: white;
 }
 
 .button2 {
@@ -30,9 +31,10 @@ section {
     width: 25%;
     height: 100px;
     border: 1px solid black;
-    background-color: greenyellow;
+    background-color: yellow;
     justify-content: center;
     align-items: center;
+    color: black;
 }
 
 .answer-bar {
@@ -41,7 +43,13 @@ section {
     width: 75%;
     height: 100px;
     border: 1px solid black;
-    background-color: #61B34F;
+    background-color: purple;
     justify-content: center;
     align-items: center;
+    color: white;
+}
+
+.eight {
+    font-weight: bold;
+    font-style: italic;
 }
